objects/nFORCE__Workflow_Orchestration__c.object
<CustomObject>
    <description>The system uses this object to activate a process builder string and call the current step the system uses for processing.</description>
    <fields>
        <fullName>nFORCE__Context_Id__c</fullName>
        <description>The system populates this field to indicate the object referenced. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field indicates the record referenced.</inlineHelpText>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Custom_Identity__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is an optional custom record identity used to assign unique identity within the Execution Context before persistence to the data layer.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This is an optional custom record identity used to assign unique identity within the Execution Context before persistence to the data layer.</inlineHelpText>
        <label>Custom Identity</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Entry_Source__c</fullName>
        <description>This is an optional field populated by the system with a value that displays the application that added this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is an optional field populated by the system with a value that displays the application that added this record.</inlineHelpText>
        <label>Entry Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Message__c</fullName>
        <description>The system or administrator populates this optional text field with the string name to call the current step the system uses for processing. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system or administrator populated field displays the string name to call the current step the system uses for processing.</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Orchestration_Step__c</fullName>
        <description>The system or administrator populates this optional text field with the string name to call the current step the system uses for processing. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system or administrator populated field displays the string name to call the current step the system uses for processing.</inlineHelpText>
        <label>Orchestration Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__State__c</fullName>
        <description>State preserved between execution contexts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Workflow Orchestration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workflow Orchestration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Orchestrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>